fix: selection control spacing

--- a/packages/react-components/src/components/selection-controls/selection-controls.module.css
+++ b/packages/react-components/src/components/selection-controls/selection-controls.module.css
@@ -19,6 +19,7 @@
     box-shadow: 0 0 0 1px var(--global-background), inset 0 0 0 1px var(--dimmed-2);
     flex-shrink: 0;
     flex-grow: 0;
+    margin: 1px;
 
     &::after {
       content: '';
